# DroidDemoAduio

./: CMakeLists.txt  README.md  README.rst  app.overlay  prj.conf  sample.yaml
src/: PlayerControlService.cpp  PlayerControlService.hpp  main.cpp
src/Llib/common/: params.hpp
src/Llib/common/interfaces/: BluetoothService.hpp  DataStream.hpp  MemoryArray.hpp  Thread.hpp
src/Llib/common/log/: log.hpp
src/Llib/periphery/: periphery.hpp
src/Llib/periphery/bluetooth/: Bluetooth.cpp  Bluetooth.hpp
src/Llib/periphery/i2s/: I2s.cpp  I2s.hpp
src/Llib/primitives/audio/: Player.cpp  Player.hpp  audio.hpp
src/Llib/primitives/handlers/: СallbackHandler.hpp
src/Llib/primitives/memory/: LArray.hpp  LArrayFixed.hpp  LVector.hpp
src/sounds/: sound_HARDKISS_ZHiva_16k.hpp  sound_MIW_Masterpice_16k.hpp  sound_MIW_Masterpice_cut_16k.hpp  sound_OE_Obiymy_16k.hpp  sound_OE_Obiymy_8k.hpp  sound_OE_Obiymy_cut_16k.hpp  sound_OE_Obiymy_loud_16k.hpp  sound_list.hpp
